# Sentinel-Gateway

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  SCALING.md  docker-compose.yml  logger.py  main.py  pyproject.toml  run_tests.sh  settings.json  start.sh  test_main.py
.github/workflows/: ci.yml
app/: __init__.py
app/application/: __init__.py  rate_limit_service.py  service_factory.py
app/domain/: __init__.py
app/domain/gateway/: __init__.py  models.py
app/domain/rate_limit/: __init__.py  models.py  repository.py
app/infrastructure/: __init__.py
app/infrastructure/config/: __init__.py  settings.py
app/infrastructure/redis/: __init__.py  client.py  rate_limit_repository.py
app/infrastructure/security/: __init__.py  api_keys.py  redis_repository.py
app/presentation/: __init__.py
app/presentation/api/: __init__.py  admin_routes.py  dependencies.py  middleware.py  routes.py  security.py
tests/: conftest.py
tests/integration/: test_placeholder.py  test_rate_limit_integration.py
tests/unit/: test_admin_routes.py  test_api_key_manager.py  test_api_key_redis_repository.py  test_api_routes.py  test_placeholder.py  test_rate_limit_models.py  test_rate_limit_service.py  test_redis_rate_limit_repository.py  test_security_dependencies.py
