[tool.poetry]
name = "sentinel-gateway"
version = "1.0.0"
description = "High-performance distributed rate limiter API gateway"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
redis = {extras = ["hiredis"], version = "^5.2.0"}
prometheus-client = "^0.21.0"
prometheus-fastapi-instrumentator = "^7.0.0"
python-json-logger = "^3.2.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
black = "^24.10.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
# Coverage can be added with: pytest --cov=app --cov-report=term-missing

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
